update content and data

--- a/data/cities/booneville/walmart-supercenter.yml
+++ b/data/cities/booneville/walmart-supercenter.yml
@@ -1,8 +1,8 @@
-id: 5315602250
-type: node
+id: 568312957
+type: way
 shop: supermarket
-latitude: 34.677408
-longitude: -88.56422
+latitude: 34.6781061
+longitude: -88.56466660000001
 postcode: "38829"
 city: Booneville
 street: "Walmart Circle"
