--- a/data/cities/corinth/walmart-supercenter.yml
+++ b/data/cities/corinth/walmart-supercenter.yml
@@ -1,8 +1,8 @@
-id: 5315602297
+id: 7829909042
 type: node
 shop: supermarket
-latitude: 34.910046
-longitude: -88.50201600000001
+latitude: 34.9099875
+longitude: -88.5021093
 postcode: "38834"
 city: Corinth
 street: "South Harper Road"
