--- a/data/cities/philadelphia/twisted-tattoos.yml
+++ b/data/cities/philadelphia/twisted-tattoos.yml
@@ -4,7 +4,7 @@ shop: tattoo
 latitude: 32.727239600000004
 longitude: -89.2275731
 postcode: "39350"
-city: philadelphia
+city: Philadelphia
 street: "County Road 147"
 housenumber: 10631
 phone: "+1(601)575-0037"
