--- a/data/cities/yazoo-city/walmart-supercenter.yml
+++ b/data/cities/yazoo-city/walmart-supercenter.yml
@@ -1,8 +1,8 @@
 id: 5315598933
 type: node
 shop: supermarket
-latitude: 32.8767
-longitude: -90.3964
+latitude: 32.8766844
+longitude: -90.3966638
 postcode: "39194"
 city: Yazoo City
 street: "Grand Avenue"
