--- a/data/cities/biloxi/clarks.yml
+++ b/data/cities/biloxi/clarks.yml
@@ -1,8 +1,8 @@
-id: 165891023
-type: way
+id: 7981106584
+type: node
 shop: convenience
-latitude: 30.447187800000002
-longitude: -88.9337385
+latitude: 30.4473024
+longitude: -88.9340227
 postcode: "39532"
 city: Biloxi
 street: "Cedar Lake Road"
