--- a/data/cities/clarksdale/walmart-supercenter.yml
+++ b/data/cities/clarksdale/walmart-supercenter.yml
@@ -1,8 +1,8 @@
-id: 5315596519
-type: node
+id: 530861023
+type: way
 shop: supermarket
-latitude: 34.180894
-longitude: -90.59052000000001
+latitude: 34.1812521
+longitude: -90.59294
 postcode: "38614"
 city: Clarksdale
 street: "South State Street"
