--- a/data/cities/iuka/walmart.yml
+++ b/data/cities/iuka/walmart.yml
@@ -1,6 +1,6 @@
 id: 5315599435
 type: node
-shop: supermarket
+shop: department store
 latitude: 34.804280000000006
 longitude: -88.20453
 postcode: "38852"
