--- a/data/cities/ridgeland/reeds-jewelers-northpark-mall.yml
+++ b/data/cities/ridgeland/reeds-jewelers-northpark-mall.yml
@@ -1,11 +1,11 @@
 id: 2910174775
 type: node
 shop: jewelry
-latitude: 32.403043000000004
-longitude: -90.12940540000001
+latitude: 32.4024063
+longitude: -90.1287731
 postcode: "39157"
 city: Ridgeland
-street: "E. County Line Rd."
+street: "East County Line Road"
 housenumber: 1200
 phone: "(601) 956-0088"
 opening_hours: ""
