--- a/data/cities/senatobia/graham-ktm.yml
+++ b/data/cities/senatobia/graham-ktm.yml
@@ -1,12 +1,12 @@
-id: 538372003
-type: way
+id: 7637194504
+type: node
 shop: motorcycle
-latitude: 34.6274798
-longitude: -89.9708509
+latitude: 34.6274316
+longitude: -89.97076440000001
 postcode: "38668"
 city: Senatobia
 street: "Wilson Drive"
 housenumber: 206
 phone: "+1 662 562 8711"
-opening_hours: "Mo-Fr 08:00-17:30; Sa 08:00-16:00; Su,PH off"
+opening_hours: "Mo-Fr 08:00-17:30; Sa 08:00-16:00; PH,Su off"
 website: "https://www.grahamktm.com/"
