--- a/data/cities/wiggins/walmart-supercenter.yml
+++ b/data/cities/wiggins/walmart-supercenter.yml
@@ -8,5 +8,5 @@ city: Wiggins
 street: "Frontage Drive East"
 housenumber: 1053
 phone: "+1-601-928-9119"
-opening_hours: "24/7"
+opening_hours: "Mo-Su 07:00-22:00"
 website: "https://www.walmart.com/store/3528/wiggins-ms/whats-new"
