--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://shoogle.us/mississippi"
+baseURL = "https://us.shoogle.net/mississippi"
 languageCode = "en-US"
 title = "Mississippi"
 theme = "ln-base"
