update content and data

--- a/data/cities/greenville/greenville-mall.yml
+++ b/data/cities/greenville/greenville-mall.yml
@@ -1,11 +1,11 @@
-id: 3487482726
-type: node
+id: 888490265
+type: way
 shop: mall
-latitude: 33.3754672
-longitude: -91.04160680000001
+latitude: 33.3764684
+longitude: -91.0420002
 postcode: ""
 city: Greenville
-street: "MS 1"
+street: "Martin Luther King Junior Boulevard"
 housenumber: 1651
 phone: ""
 opening_hours: ""
