--- a/data/cities/greenville/kroger.yml
+++ b/data/cities/greenville/kroger.yml
@@ -1,8 +1,8 @@
 id: 577203867
 type: way
 shop: supermarket
-latitude: 33.370147700000004
-longitude: -91.0382812
+latitude: 33.3700879
+longitude: -91.038275
 postcode: "38701"
 city: Greenville
 street: "Highway 1 S"
