--- a/data/cities/greenville/lowes.yml
+++ b/data/cities/greenville/lowes.yml
@@ -5,7 +5,7 @@ latitude: 33.367704100000005
 longitude: -91.03828530000001
 postcode: "38701"
 city: Greenville
-street: "Martin Luther King Jr Boulevard"
+street: "Martin Luther King Junior Boulevard"
 housenumber: 1886
 phone: ""
 opening_hours: ""
