--- a/data/cities/greenville/stein-mart.yml
+++ b/data/cities/greenville/stein-mart.yml
@@ -1,11 +1,11 @@
 id: 577199981
 type: way
 shop: clothes
-latitude: 33.373893100000004
-longitude: -91.03733310000001
+latitude: 33.373831200000005
+longitude: -91.0372911
 postcode: "38701"
 city: Greenville
-street: "Highway 1"
+street: "Martin Luther King Junior Boulevard"
 housenumber: 1656
 phone: ""
 opening_hours: ""
