--- a/data/cities/hattiesburg/cvs-pharmacy.yml
+++ b/data/cities/hattiesburg/cvs-pharmacy.yml
@@ -1,12 +1,12 @@
-id: 314889634
+id: 319054920
 type: way
-shop: variety store
-latitude: 31.325238000000002
-longitude: -89.3199943
+shop: convenience
+latitude: 31.325271200000003
+longitude: -89.3279911
 postcode: "39401"
 city: Hattiesburg
 street: "Hardy Street"
-housenumber: 1909
+housenumber: 2507
 phone: ""
 opening_hours: ""
 website: ""
