--- a/data/cities/greenville/walmart-supercenter.yml
+++ b/data/cities/greenville/walmart-supercenter.yml
@@ -1,12 +1,12 @@
-id: 3487482728
-type: node
+id: 886816972
+type: way
 shop: supermarket
-latitude: 33.3678363
-longitude: -91.04387150000001
+latitude: 33.366884
+longitude: -91.044263
 postcode: "38701"
 city: Greenville
-street: "Highway 1 South"
+street: "Martin Luther King Junior Boulevard"
 housenumber: 1831
-phone: "+1-662-332-9026"
+phone: "+1 662-332-9026"
 opening_hours: "24/7"
 website: "https://www.walmart.com/store/182/greenville-ms/whats-new"
