--- a/data/cities/hattiesburg/dollar-general-3.yml
+++ b/data/cities/hattiesburg/dollar-general-3.yml
@@ -1,12 +1,12 @@
-id: 654313070
+id: 647069908
 type: way
 shop: variety store
-latitude: 31.305066500000002
-longitude: -89.40884390000001
+latitude: 31.3355673
+longitude: -89.3664847
 postcode: "39402"
 city: Hattiesburg
-street: "Old Highway 11"
-housenumber: 5182
-phone: "+1 (601) 329-0105"
-opening_hours: "Sa-Th 08:00-22:00; Fr 08:00-23:00"
+street: "West 4th Street"
+housenumber: 4899
+phone: "+1 (601) 336-2892"
+opening_hours: "Mo-Su 08:00-23:00"
 website: "https://www.dollargeneral.com/"
