--- a/data/cities/hattiesburg/dollar-general-4.yml
+++ b/data/cities/hattiesburg/dollar-general-4.yml
@@ -1,12 +1,12 @@
-id: 757757233
+id: 654313070
 type: way
 shop: variety store
-latitude: 31.3078228
-longitude: -89.3739518
+latitude: 31.305066500000002
+longitude: -89.40884390000001
 postcode: "39402"
 city: Hattiesburg
-street: "Oak Grove Road"
-housenumber: 2603
-phone: "+1 (601) 336-2804"
-opening_hours: "Tu-Th 08:00-22:00; Fr-Mo 08:00-23:00"
+street: "Old Highway 11"
+housenumber: 5182
+phone: "+1 (601) 329-0105"
+opening_hours: "Sa-Th 08:00-22:00; Fr 08:00-23:00"
 website: "https://www.dollargeneral.com/"
