--- a/data/cities/hattiesburg/keiths-superstore-2.yml
+++ b/data/cities/hattiesburg/keiths-superstore-2.yml
@@ -1,12 +1,12 @@
-id: 647058149
+id: 546213651
 type: way
 shop: convenience
-latitude: 31.332702800000003
-longitude: -89.38102310000001
+latitude: 31.3611514
+longitude: -89.34991000000001
 postcode: "39402"
 city: Hattiesburg
-street: "West 4th Street"
-housenumber: 5170
-phone: "+1 (601) 296-6008"
-opening_hours: "Su-Th 05:00-23:00; Fr-Sa 05:00-24:00"
-website: "http://www.keithsuperstore.com/"
+street: "US 49"
+housenumber: 6750
+phone: "+1 (601) 271-8400"
+opening_hours: "Mo-Su 05:00-23:59"
+website: "http://www.keithssuperstores.com/"
