--- a/data/cities/hattiesburg/napa-auto-parts.yml
+++ b/data/cities/hattiesburg/napa-auto-parts.yml
@@ -1,12 +1,12 @@
-id: 7021173631
-type: node
+id: 750985033
+type: way
 shop: car parts
-latitude: 31.379569600000004
-longitude: -89.3650829
+latitude: 31.379608800000003
+longitude: -89.36524870000001
 postcode: "39401"
 city: Hattiesburg
 street: "US 49"
 housenumber: 7068
-phone: ""
+phone: "+1 (601) 264-0427"
 opening_hours: "Mo-Fr 07:30-17:30; Sa-Su 08:00-17:00"
 website: "https://www.napaonline.com/en/ms/hattiesburg/store/22615"
