--- a/data/cities/sumrall/a-window-affair.yml
+++ b/data/cities/sumrall/a-window-affair.yml
@@ -5,7 +5,7 @@ latitude: 31.423332100000003
 longitude: -89.5462097
 postcode: "39482"
 city: Sumrall
-street: "Preston"
+street: "Preston Street"
 housenumber: 4
 phone: ""
 opening_hours: ""
