--- a/data/cities/sumrall/hair-time.yml
+++ b/data/cities/sumrall/hair-time.yml
@@ -1,11 +1,11 @@
 id: 6578908920
 type: node
 shop: beauty
-latitude: 31.422731700000003
-longitude: -89.5463429
+latitude: 31.422710700000003
+longitude: -89.5463467
 postcode: "39482"
 city: Sumrall
-street: "Preston"
+street: "Preston Street"
 housenumber: 3
 phone: ""
 opening_hours: ""
