--- a/data/cities/monticello/family-dollar.yml
+++ b/data/cities/monticello/family-dollar.yml
@@ -6,7 +6,7 @@ longitude: -90.11327030000001
 postcode: ""
 city: monticello
 street: "West Broad Street"
-housenumber: 
+housenumber: 713
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Su 08:00-22:00"
 website: ""
