update content and data

--- a/data/cities/ellisville/endom-trailer-company.yml
+++ b/data/cities/ellisville/endom-trailer-company.yml
@@ -1,7 +1,7 @@
-id: 8369314443
-type: node
-latitude: 31.610868500000002
-longitude: -89.2158035
+id: 912871162
+type: way
+latitude: 31.610953300000002
+longitude: -89.2156508
 postcode: "39437"
 city: Ellisville
 street: "MS 588"
