update content and data

--- a/data/cities/ellisville/autozone.yml
+++ b/data/cities/ellisville/autozone.yml
@@ -1,7 +1,7 @@
 id: 468096937
 type: way
-latitude: 31.607543900000003
-longitude: -89.199803
+latitude: 31.6075553
+longitude: -89.19981170000001
 postcode: "39437"
 city: Ellisville
 street: "Hill Street"
