--- a/data/cities/ellisville/fast-mart.yml
+++ b/data/cities/ellisville/fast-mart.yml
@@ -1,7 +1,7 @@
 id: 468096977
 type: way
-latitude: 31.608667
-longitude: -89.20370270000001
+latitude: 31.6086761
+longitude: -89.2037121
 postcode: "39437"
 city: Ellisville
 street: "Hill Street"
