update content and data

--- a/data/cities/flowood/lowes.yml
+++ b/data/cities/flowood/lowes.yml
@@ -2,10 +2,10 @@ id: 4691613619
 type: node
 latitude: 32.341125500000004
 longitude: -90.07164780000001
-postcode: ""
+postcode: "39232"
 city: Flowood
-street: ""
-housenumber: 
-phone: ""
+street: "Ridge Way"
+housenumber: 120
+phone: "(601) 992-8475"
 opening_hours: ""
 website: ""
