--- a/data/cities/laurel/c-spire.yml
+++ b/data/cities/laurel/c-spire.yml
@@ -1,7 +1,7 @@
 id: 902145894
 type: way
-latitude: 31.704754
-longitude: -89.14720670000001
+latitude: 31.7047637
+longitude: -89.14719600000001
 postcode: "39440"
 city: Laurel
 street: "MS 15"
