--- a/data/cities/ridgeland/indian-cycle.yml
+++ b/data/cities/ridgeland/indian-cycle.yml
@@ -8,4 +8,4 @@ street: "s. Pear Orchard Rd"
 housenumber: 677
 phone: "601.956.8383"
 opening_hours: ""
-website: "indiancyclefitness.com"
+website: "https://www.indiancyclefitness.com/"
