--- a/data/cities/laurel/walmart-supercenter.yml
+++ b/data/cities/laurel/walmart-supercenter.yml
@@ -1,10 +1,10 @@
 id: 553850194
 type: way
-latitude: 31.710308200000004
-longitude: -89.14717610000001
+latitude: 31.7103101
+longitude: -89.14715100000001
 postcode: "39440"
 city: Laurel
-street: "Highway 15 N"
+street: "MS 15"
 housenumber: 1621
 phone: "+1-601-649-6191"
 opening_hours: "24/7"
