update content and data

--- a/data/cities/hattiesburg/goodwill.yml
+++ b/data/cities/hattiesburg/goodwill.yml
@@ -1,7 +1,7 @@
 id: 314809783
 type: way
 latitude: 31.311949900000002
-longitude: -89.32028410000001
+longitude: -89.320279
 postcode: "39401"
 city: Hattiesburg
 street: "US 49"
