--- a/data/cities/moselle/jones-and-son-funeral-home.yml
+++ b/data/cities/moselle/jones-and-son-funeral-home.yml
@@ -1,7 +1,7 @@
 id: 468025489
 type: way
-latitude: 31.518012400000003
-longitude: -89.28116530000001
+latitude: 31.518025
+longitude: -89.2811573
 postcode: "39459"
 city: Moselle
 street: "Moselle-Seminary Road"
