--- a/data/cities/corinth/walmart-supercenter.yml
+++ b/data/cities/corinth/walmart-supercenter.yml
@@ -1,7 +1,7 @@
-id: 7829909042
-type: node
-latitude: 34.9099875
-longitude: -88.5021093
+id: 589996030
+type: way
+latitude: 34.9102297
+longitude: -88.5031641
 postcode: "38834"
 city: Corinth
 street: "South Harper Road"
