--- a/data/cities/hattiesburg/garner-lumley-electric-supply.yml
+++ b/data/cities/hattiesburg/garner-lumley-electric-supply.yml
@@ -1,7 +1,7 @@
 id: 383537630
 type: way
-latitude: 31.329185100000004
-longitude: -89.287878
+latitude: 31.329186300000003
+longitude: -89.2878443
 postcode: "39401"
 city: Hattiesburg
 street: "East Pine Street"
