--- a/data/cities/tupelo/trails-and-trends.yml
+++ b/data/cities/tupelo/trails-and-trends.yml
@@ -6,6 +6,6 @@ postcode: "38804"
 city: Tupelo
 street: "Market Center Drive, Suite 200"
 housenumber: 3870 Market Center Drive, Suite 200
-phone: ""
+phone: "662.205.4921"
 opening_hours: ""
 website: "trailsandtreads.ms"
