update content and data

--- a/data/cities/pass-christian/walmart-garden-center.yml
+++ b/data/cities/pass-christian/walmart-garden-center.yml
@@ -1,7 +1,7 @@
-id: 166357005
-type: way
-latitude: 30.3360379
-longitude: -89.1880237
+id: 9178791177
+type: node
+latitude: 30.3354664
+longitude: -89.1893898
 postcode: "39571"
 city: Pass Christian
 street: "East Beach Boulevard"
