--- a/data/cities/pearl/deep-south-automotive.yml
+++ b/data/cities/pearl/deep-south-automotive.yml
@@ -8,4 +8,4 @@ street: "U.S. Highway 80"
 housenumber: 3575
 phone: "601-292-4055"
 opening_hours: ""
-website: "deepsouthautomotive.com"
+website: "https://deepsouthautomotive.com/"
