--- a/data/cities/starkville/down-to-game.yml
+++ b/data/cities/starkville/down-to-game.yml
@@ -1,7 +1,7 @@
 id: 209716870
 type: way
-latitude: 33.458484
-longitude: -88.783157
+latitude: 33.4584828
+longitude: -88.7831563
 postcode: "39759"
 city: Starkville
 street: "Lee Boulevard"
