--- a/data/cities/perkinston/dollar-general.yml
+++ b/data/cities/perkinston/dollar-general.yml
@@ -1,7 +1,7 @@
-id: 8387079918
-type: node
-latitude: 30.7880101
-longitude: -89.13492640000001
+id: 992937585
+type: way
+latitude: 30.78817
+longitude: -89.13501690000001
 postcode: "39573"
 city: Perkinston
 street: "MS 49"
