--- a/data/cities/lumberton/family-dollar.yml
+++ b/data/cities/lumberton/family-dollar.yml
@@ -4,7 +4,7 @@ latitude: 30.9998879
 longitude: -89.44949100000001
 postcode: "39455"
 city: Lumberton
-street: "East Main Street"
+street: "East Main Avenue"
 housenumber: 100
 phone: "+1 (601) 688-5000"
 opening_hours: ""
