update content and data

--- a/data/cities/hattiesburg/walt-massey-chevrolet.yml
+++ b/data/cities/hattiesburg/walt-massey-chevrolet.yml
@@ -8,4 +8,4 @@ street: "West Pine Street"
 housenumber: 1501
 phone: ""
 opening_hours: "Mo-Sa 07:00-19:00"
-website: "waltmasseyauto.com"
+website: "https://www.waltmasseyauto.com/"
