update content and data

--- a/data/cities/corinth/gamestop.yml
+++ b/data/cities/corinth/gamestop.yml
@@ -4,7 +4,7 @@ latitude: 34.9126
 longitude: -88.50509
 postcode: "38834"
 city: Corinth
-street: "Virginia Ln"
+street: "Virginia Lane"
 housenumber: 2201
 phone: ""
 opening_hours: ""
