--- a/data/cities/monticello/rameys-marketplace.yml
+++ b/data/cities/monticello/rameys-marketplace.yml
@@ -5,7 +5,7 @@ longitude: -90.10901
 postcode: "39654"
 city: Monticello
 street: "F E Sellers Highway"
-housenumber: 
+housenumber: 138
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Sa 07:00-21:00; Su 09:00-20:00"
 website: ""
