--- a/data/cities/petal/walgreens.yml
+++ b/data/cities/petal/walgreens.yml
@@ -8,4 +8,4 @@ street: "West Central Avenue"
 housenumber: 103
 phone: "+1 (601) 554-3236"
 opening_hours: "Mo-Su 08:00-22:00"
-website: "https://www.walgreens.com/"
+website: "https://www.walgreens.com/locator/walgreens-103+w+central+ave-petal-ms-39465/id=10430"
