update content and data

--- a/data/cities/richland/walmart-supercenter.yml
+++ b/data/cities/richland/walmart-supercenter.yml
@@ -1,7 +1,7 @@
-id: 4950774125
-type: node
-latitude: 32.21991
-longitude: -90.15134
+id: 1024283630
+type: way
+latitude: 32.22047
+longitude: -90.15081
 postcode: "39218"
 city: Richland
 street: "Marketplace Drive"
