--- a/data/cities/richton/cedar-street-junction.yml
+++ b/data/cities/richton/cedar-street-junction.yml
@@ -4,7 +4,7 @@ latitude: 31.34768
 longitude: -88.93587
 postcode: "39476"
 city: Richton
-street: "Front Street"
+street: "South Front Street"
 housenumber: 
 phone: ""
 opening_hours: ""
