--- a/data/cities/richton/front-street-furniture.yml
+++ b/data/cities/richton/front-street-furniture.yml
@@ -4,7 +4,7 @@ latitude: 31.34877
 longitude: -88.93579
 postcode: "39476"
 city: Richton
-street: "Front Street"
+street: "South Front Street"
 housenumber: 108
 phone: "+1 (601) 788-9713"
 opening_hours: "Mo-We, Fr 08:00-16:00; Sa 08:00-14:00"
