update content and data

--- a/data/cities/laural/grocery-depot.yml
+++ b/data/cities/laural/grocery-depot.yml
@@ -1,7 +1,7 @@
-id: 996893415
-type: way
-latitude: 31.71955
-longitude: -89.14766
+id: 9548196354
+type: node
+latitude: 31.71924
+longitude: -89.14742
 postcode: "39440"
 city: Laural
 street: "Hwy 15 North"
