update content and data

--- a/data/cities/jackson/grocery-depot.yml
+++ b/data/cities/jackson/grocery-depot.yml
@@ -4,7 +4,7 @@ latitude: 32.30761
 longitude: -90.22884
 postcode: "39209"
 city: Jackson
-street: "Robinson St"
+street: "Robinson Street"
 housenumber: 2526
 phone: "+1 (601) 353-0089"
 opening_hours: ""
