update content and data

--- a/data/cities/gulfport/walmart-neighborhood-market.yml
+++ b/data/cities/gulfport/walmart-neighborhood-market.yml
@@ -1,11 +1,11 @@
-id: 5315596605
+id: 5315596622
 type: node
-latitude: 30.4514
-longitude: -89.10152
-postcode: "39503"
+latitude: 30.39939
+longitude: -89.01944
+postcode: "39507"
 city: Gulfport
-street: "Highway 49"
-housenumber: 11333
-phone: "+1-228-284-6114"
-opening_hours: "Mo-Su 06:00-23:00"
-website: "https://www.walmart.com/store/6323/gulfport-ms/whats-new"
+street: "East Pass Road"
+housenumber: 1733
+phone: "+1-228-284-6991"
+opening_hours: "Mo-Su 06:00-24:00"
+website: "https://www.walmart.com/store/6165/gulfport-ms/whats-new"
