update content and data

--- a/data/cities/meridian/walmart-neighborhood-market.yml
+++ b/data/cities/meridian/walmart-neighborhood-market.yml
@@ -1,7 +1,7 @@
-id: 5315598149
-type: node
-latitude: 32.3919
-longitude: -88.6811
+id: 803742669
+type: way
+latitude: 32.39184
+longitude: -88.68115
 postcode: "39301"
 city: Meridian
 street: "Highway 39 North"
