--- a/data/cities/purvis/garys-auto-parts.yml
+++ b/data/cities/purvis/garys-auto-parts.yml
@@ -8,4 +8,4 @@ street: "US 11"
 housenumber: 5799
 phone: "+1 (601) 794-8582"
 opening_hours: "Mo-Fr 07:00-17:00; Sa 07:00-12:00"
-website: "locations.bumpertobumper.com/ms/purvis/2673084/"
+website: "https://locations.bumpertobumper.com/ms/purvis/2673084/"
