--- a/data/cities/ellisville/butler-collision-center.yml
+++ b/data/cities/ellisville/butler-collision-center.yml
@@ -8,4 +8,4 @@ street: "Warrior Road"
 housenumber: 7
 phone: "+1-601-477-9880"
 opening_hours: ""
-website: "http://www.butlercollision.com"
+website: "https://www.butlercollision.com/"
