update content and data

--- a/data/cities/picayune/american-glass-service.yml
+++ b/data/cities/picayune/american-glass-service.yml
@@ -1,7 +1,7 @@
-id: 5666560804
-type: node
-latitude: 30.51477
-longitude: -89.67909
+id: 1066304744
+type: way
+latitude: 30.51469
+longitude: -89.67907
 postcode: "39466"
 city: Picayune
 street: "South Haugh Avenue"
