update content and data

--- a/data/cities/meridian/walmart-supercenter-2.yml
+++ b/data/cities/meridian/walmart-supercenter-2.yml
@@ -1,7 +1,7 @@
-id: 5315601789
-type: node
-latitude: 32.38732
-longitude: -88.74826
+id: 1068089290
+type: way
+latitude: 32.38712
+longitude: -88.7492
 postcode: "39307"
 city: Meridian
 street: "Highway 19 North"
