update content and data

--- a/data/cities/petal/walmart-supercenter.yml
+++ b/data/cities/petal/walmart-supercenter.yml
@@ -1,7 +1,7 @@
-id: 2797865982
-type: node
-latitude: 31.35304
-longitude: -89.23255
+id: 1076863329
+type: way
+latitude: 31.35359
+longitude: -89.23303
 postcode: "39465"
 city: Petal
 street: "Byrd Boulevard"
