update content and data

--- a/data/cities/waynesboro/walmart-supercenter.yml
+++ b/data/cities/waynesboro/walmart-supercenter.yml
@@ -1,7 +1,7 @@
-id: 5315596422
-type: node
-latitude: 31.68893
-longitude: -88.62941
+id: 1080059773
+type: way
+latitude: 31.68971
+longitude: -88.63039
 postcode: "39367"
 city: Waynesboro
 street: "Azalea Drive"
