--- a/data/cities/holly-springs/christines-fashion-and-music.yml
+++ b/data/cities/holly-springs/christines-fashion-and-music.yml
@@ -7,5 +7,5 @@ city: Holly Springs
 street: "239 Martin Luther King Jr Dr"
 housenumber: 
 phone: "662-252-6666"
-opening_hours: "Monday-Saturday: 10:00AM to 6:00PM"
+opening_hours: "Mo-Sa 10:00-18:00"
 website: "https://christinesfashionandmusic.biz"
