--- a/data/cities/houston/walmart.yml
+++ b/data/cities/houston/walmart.yml
@@ -1,7 +1,7 @@
-id: 5315598131
-type: node
-latitude: 33.8947
-longitude: -88.98956
+id: 1084520471
+type: way
+latitude: 33.89493
+longitude: -88.98977
 postcode: "38851"
 city: Houston
 street: "East Madison Street"
