update content and data

--- a/data/cities/oxford/cannon-collision-center.yml
+++ b/data/cities/oxford/cannon-collision-center.yml
@@ -1,10 +1,10 @@
-id: 599954375
+id: 599954374
 type: way
-latitude: 34.3619
-longitude: -89.57916
+latitude: 34.36194
+longitude: -89.57798
 postcode: "38655"
 city: Oxford
-street: "Thacker Loop"
+street: "North Thacker Loop"
 housenumber: 100
 phone: ""
 opening_hours: ""
