update content and data

--- a/data/cities/florence/courtneys-hardware.yml
+++ b/data/cities/florence/courtneys-hardware.yml
@@ -4,8 +4,8 @@ latitude: 32.15289
 longitude: -90.1313
 postcode: "39073"
 city: Florence
-street: ""
-housenumber: 
+street: "South Church Street"
+housenumber: 116
 phone: "(601) 845-2288"
-opening_hours: ""
-website: ""
+opening_hours: "Mo-Su 07:00-18:00"
+website: "https://www.doitbest.com/"
