update content and data

--- a/data/cities/picayune/hart-to-hart.yml
+++ b/data/cities/picayune/hart-to-hart.yml
@@ -1,7 +1,7 @@
-id: 5324726520
-type: node
-latitude: 30.52103
-longitude: -89.69031
+id: 1098261057
+type: way
+latitude: 30.52095
+longitude: -89.69023
 postcode: ""
 city: Picayune
 street: "Rosa Street"
