--- a/data/cities/picayune/browns-funeral-home.yml
+++ b/data/cities/picayune/browns-funeral-home.yml
@@ -1,7 +1,7 @@
-id: 5324727121
-type: node
-latitude: 30.5211
-longitude: -89.69346
+id: 1098261377
+type: way
+latitude: 30.52116
+longitude: -89.69332
 postcode: ""
 city: Picayune
 street: "Rosa Street"
