--- a/data/cities/iuka/walmart.yml
+++ b/data/cities/iuka/walmart.yml
@@ -1,7 +1,7 @@
-id: 5315599435
-type: node
-latitude: 34.80428
-longitude: -88.20453
+id: 1110670388
+type: way
+latitude: 34.80463
+longitude: -88.20487
 postcode: "38852"
 city: Iuka
 street: "Battleground Drive"
