update content and data

--- a/data/cities/magee/schaub-flooring.yml
+++ b/data/cities/magee/schaub-flooring.yml
@@ -7,5 +7,5 @@ city: Magee
 street: "114 Simpson Highway 149"
 housenumber: 
 phone: "601-849-3377"
-opening_hours: "Monday to friday: 8:00AM to 5:00PM"
+opening_hours: "Mo-Fr 08:00-17:00"
 website: "https://schaubflooring.com"
