update content and data

--- a/data/cities/monticello/june-bugs.yml
+++ b/data/cities/monticello/june-bugs.yml
@@ -6,6 +6,6 @@ postcode: "39654"
 city: Monticello
 street: "East Broad Street"
 housenumber: 237
-phone: "+1 601 441 1378"
-opening_hours: "Fr[1],Sa[1] 09:00-17:00"
+phone: "+1 601-441-1378"
+opening_hours: "Fr,Sa 09:00-17:00"
 website: ""
