update content and data

--- a/data/cities/monticello/first-consumer-loans.yml
+++ b/data/cities/monticello/first-consumer-loans.yml
@@ -1,7 +1,7 @@
-id: 10279152240
-type: node
-latitude: 31.5584
-longitude: -90.11414
+id: 1124027773
+type: way
+latitude: 31.55843
+longitude: -90.11425
 postcode: "39654"
 city: Monticello
 street: "West Broad Street"
