--- a/data/cities/vicksburg/kroger.yml
+++ b/data/cities/vicksburg/kroger.yml
@@ -1,7 +1,7 @@
-id: 4230974610
-type: node
-latitude: 32.31495
-longitude: -90.88204
+id: 1132259053
+type: way
+latitude: 32.31548
+longitude: -90.88198
 postcode: "39180"
 city: Vicksburg
 street: "Pemberton Square Boulevard"
