update content and data

--- a/data/cities/hattiesburg/aamco-transmission.yml
+++ b/data/cities/hattiesburg/aamco-transmission.yml
@@ -1,11 +1,11 @@
-id: 319760387
+id: 320702650
 type: way
-latitude: 31.30471
-longitude: -89.31503
+latitude: 31.32193
+longitude: -89.36314
 postcode: "39402"
 city: Hattiesburg
-street: "West Pine Street"
-housenumber: 2101
-phone: "+1 (601) 264-4500"
+street: "Mayfair Road"
+housenumber: 109
+phone: "+1 (601) 264-7400"
 opening_hours: "Mo-Fr 08:00-17:00"
-website: "https://www.aamco.com/centerinfo.asp?centerNum=6012644500"
+website: "https://www.aamco.com/Auto-Repair-Center/MS/Hattiesburg/Mayfair-Road"
