--- a/data/cities/hattiesburg/advance-auto-parts.yml
+++ b/data/cities/hattiesburg/advance-auto-parts.yml
@@ -1,11 +1,11 @@
-id: 650393704
+id: 355800240
 type: way
-latitude: 31.32178
-longitude: -89.37304
-postcode: "39402"
+latitude: 31.31575
+longitude: -89.30592
+postcode: "39401"
 city: Hattiesburg
-street: "Hardy Street"
-housenumber: 5060
-phone: "+1 (601) 264-4690"
-opening_hours: "Mo-Sa 07:00-20:00; Su 09:00-19:00"
-website: "http://www.advanceautoparts.com/"
+street: "Broadway Drive"
+housenumber: 300
+phone: ""
+opening_hours: ""
+website: ""
