update content and data

--- a/data/cities/hattiesburg/circle-k.yml
+++ b/data/cities/hattiesburg/circle-k.yml
@@ -1,11 +1,11 @@
-id: 542693914
+id: 750986056
 type: way
-latitude: 31.2567
-longitude: -89.33843
+latitude: 31.37869
+longitude: -89.36495
 postcode: "39402"
 city: Hattiesburg
-street: "US 11"
-housenumber: 4050
-phone: ""
+street: "US 49"
+housenumber: 7060
+phone: "+1 (601) 268-2099"
 opening_hours: "24/7"
-website: ""
+website: "https://www.circlek.com/store-locator/US/hattiesburg/7060-hwy-49-n/2723385"
