--- a/data/cities/purvis/keiths-superstore-us-11-2.yml
+++ b/data/cities/purvis/keiths-superstore-us-11-2.yml
@@ -1,11 +1,11 @@
-id: 676120725
+id: 653475677
 type: way
-latitude: 31.14517
-longitude: -89.40444
+latitude: 31.14365
+longitude: -89.40555
 postcode: "39475"
 city: Purvis
 street: "US 11"
-housenumber: 5791
+housenumber: 5815
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Su 05:00-23:00"
 website: ""
