--- a/data/cities/biloxi/main-exchange.yml
+++ b/data/cities/biloxi/main-exchange.yml
@@ -7,5 +7,5 @@ city: Biloxi
 street: "Larcher Boulevard"
 housenumber: 506
 phone: "+1 (228) 435-2524"
-opening_hours: ""
+opening_hours: "Mo-Sa 09:00-19:00; Su 10:00-17:00"
 website: "https://www.shopmyexchange.com/exchange-stores/United%20States/MS/Biloxi/Keesler-Main-Exchange-1032749"
