update content and data

--- a/data/cities/hattiesburg/lake-serene-grocery.yml
+++ b/data/cities/hattiesburg/lake-serene-grocery.yml
@@ -1,11 +1,11 @@
-id: 620391349
+id: 646586275
 type: way
-latitude: 31.25591
-longitude: -89.33878
-postcode: "39402"
+latitude: 31.36256
+longitude: -89.29793
+postcode: "39401"
 city: Hattiesburg
-street: "US 11"
-housenumber: 4062
-phone: "+1 (601) 336-6040"
-opening_hours: "Mo-Th 05:00-23:00; Fr-Su 05:00-22:00"
+street: "Monroe Road"
+housenumber: 52
+phone: "+1 (601) 336-5438"
+opening_hours: "Mo-Sa 05:00-22:00; Su 06:00-21:00"
 website: "http://www.lakeserenegrocery.com/"
