update content and data

--- a/data/cities/southaven/grapevine-liquor-and-wine.yml
+++ b/data/cities/southaven/grapevine-liquor-and-wine.yml
@@ -7,5 +7,5 @@ city: Southaven
 street: "5847 Getwell Rd, A13"
 housenumber: 
 phone: "662-253-8836"
-opening_hours: "Mon-Sat: 10:00AM to 10:00PM"
+opening_hours: "Mo-Sa 10:00-22:00"
 website: "https://grapevineliquorandwine-ms.com"
