--- a/data/cities/hattiesburg/dandy-dans-hardy-street.yml
+++ b/data/cities/hattiesburg/dandy-dans-hardy-street.yml
@@ -1,10 +1,10 @@
-id: 546213640
+id: 318523900
 type: way
-latitude: 31.36276
-longitude: -89.35152
+latitude: 31.32227
+longitude: -89.36799
 postcode: "39402"
 city: Hattiesburg
-street: "US 49"
+street: "Hardy Street"
 housenumber: 
 phone: ""
 opening_hours: ""
