--- a/data/cities/hattiesburg/keiths-superstore-us-49.yml
+++ b/data/cities/hattiesburg/keiths-superstore-us-49.yml
@@ -1,11 +1,11 @@
-id: 546213651
+id: 882560490
 type: way
-latitude: 31.36115
-longitude: -89.34991
+latitude: 31.39084
+longitude: -89.3766
 postcode: "39402"
 city: Hattiesburg
 street: "US 49"
-housenumber: 6750
-phone: "+1 (601) 271-8400"
-opening_hours: "Mo-Su 05:00-23:59"
+housenumber: 7276
+phone: "+1 (601) 296-6761"
+opening_hours: "Su-Th 05:00-23:00; Fr-Sa 05:00-24:00"
 website: "http://www.keithssuperstores.com/"
