--- a/data/cities/ocean-springs/a-1-auto-brokers.yml
+++ b/data/cities/ocean-springs/a-1-auto-brokers.yml
@@ -7,5 +7,5 @@ city: Ocean Springs
 street: "6400 Washington Ave"
 housenumber: 
 phone: "228-875-8252"
-opening_hours: "Mo-Fr 09:00-18:00 Sa: 10:00 to 15:00"
+opening_hours: "Mo-Fr 09:00-18:00; Sa 10:00-15:00"
 website: "https://a-1autobrokers.com"
