--- a/data/cities/brandon/dollar-general.yml
+++ b/data/cities/brandon/dollar-general.yml
@@ -1,11 +1,11 @@
-id: 442910749
+id: 396767210
 type: way
-latitude: 32.29793
-longitude: -89.9948
-postcode: "39042"
+latitude: 32.3822
+longitude: -90.037
+postcode: "39047"
 city: Brandon
-street: "Hwy 471"
-housenumber: 1042
+street: "Spillway Road"
+housenumber: 1905
 phone: ""
 opening_hours: ""
 website: ""
