update content and data

--- a/data/cities/biloxi/gold-and-diamond-exchange.yml
+++ b/data/cities/biloxi/gold-and-diamond-exchange.yml
@@ -8,4 +8,4 @@ street: "Caillavet Street"
 housenumber: 291
 phone: "+1-228-207-6413"
 opening_hours: "24/7"
-website: "http://goldanddiamondms.com"
+website: ""
