--- a/data/cities/buckatunna/dollar-general.yml
+++ b/data/cities/buckatunna/dollar-general.yml
@@ -1,7 +1,7 @@
-id: 5994357876
-type: node
-latitude: 31.55065
-longitude: -88.53141
+id: 1012220183
+type: way
+latitude: 31.54999
+longitude: -88.53184
 postcode: "39322"
 city: Buckatunna
 street: "US 45"
