--- a/data/cities/forest/walmart-supercenter.yml
+++ b/data/cities/forest/walmart-supercenter.yml
@@ -1,7 +1,7 @@
-id: 5315602293
-type: node
-latitude: 32.33864
-longitude: -89.48617
+id: 656875140
+type: way
+latitude: 32.33878
+longitude: -89.48682
 postcode: "39074"
 city: Forest
 street: "Highway 35 South"
