--- a/data/cities/foxworth/dollar-general.yml
+++ b/data/cities/foxworth/dollar-general.yml
@@ -1,7 +1,7 @@
-id: 9387257083
-type: node
-latitude: 31.23535
-longitude: -89.86043
+id: 1017731711
+type: way
+latitude: 31.23505
+longitude: -89.86033
 postcode: "39483"
 city: Foxworth
 street: "Highway 98 West"
