--- a/data/cities/lucedale/walmart-supercenter.yml
+++ b/data/cities/lucedale/walmart-supercenter.yml
@@ -1,7 +1,7 @@
-id: 5315601794
-type: node
-latitude: 30.90183
-longitude: -88.59514
+id: 486629071
+type: way
+latitude: 30.90197
+longitude: -88.59578
 postcode: "39452"
 city: Lucedale
 street: "Old 63 South"
