--- a/data/cities/newton/walmart-supercenter.yml
+++ b/data/cities/newton/walmart-supercenter.yml
@@ -1,7 +1,7 @@
-id: 5315602287
-type: node
-latitude: 32.33901
-longitude: -89.1421
+id: 657865783
+type: way
+latitude: 32.33956
+longitude: -89.14183
 postcode: "39345"
 city: Newton
 street: "Eastside Drive"
