--- a/data/cities/hattiesburg/keiths-superstore.yml
+++ b/data/cities/hattiesburg/keiths-superstore.yml
@@ -1,11 +1,11 @@
-id: 647058149
+id: 318528816
 type: way
-latitude: 31.3327
-longitude: -89.38102
+latitude: 31.31584
+longitude: -89.41279
 postcode: "39402"
 city: Hattiesburg
-street: "West 4th Street"
-housenumber: 5170
-phone: "+1 (601) 296-6008"
-opening_hours: "Su-Th 05:00-23:00; Fr-Sa 05:00-24:00"
+street: "Old Highway 11"
+housenumber: 5331
+phone: "+1 (601) 271-8711"
+opening_hours: "Mo-Su 05:00-23:00"
 website: "http://www.keithsuperstore.com/"
