--- a/data/cities/jackson/avanti-travel-inc.yml
+++ b/data/cities/jackson/avanti-travel-inc.yml
@@ -4,8 +4,8 @@ latitude: 32.3336
 longitude: -90.09591
 postcode: "39232"
 city: Jackson
-street: "Lakeland E Dr"
+street: "Lakeland East Drive"
 housenumber: 625
 phone: "+1-601-981-9111"
-opening_hours: "Monday-Friday: 9:00AM to 5:00PM"
+opening_hours: "Mo-Fr 09:00 - 17:00"
 website: "http://travelwithavanti.com"
