--- a/data/cities/meridian/walmart-supercenter.yml
+++ b/data/cities/meridian/walmart-supercenter.yml
@@ -1,7 +1,7 @@
-id: 5315594645
-type: node
-latitude: 32.35449
-longitude: -88.68312
+id: 1085622946
+type: way
+latitude: 32.35476
+longitude: -88.68417
 postcode: "39301"
 city: Meridian
 street: "2nd Street South"
