update content and data

--- a/data/cities/canton/walmart-supercenter.yml
+++ b/data/cities/canton/walmart-supercenter.yml
@@ -1,7 +1,7 @@
-id: 5315598935
-type: node
-latitude: 32.59599
-longitude: -90.07302
+id: 1167717913
+type: way
+latitude: 32.59661
+longitude: -90.07263
 postcode: "39046"
 city: Canton
 street: "Feather Lane"
