--- a/data/cities/cleveland/walmart-supercenter.yml
+++ b/data/cities/cleveland/walmart-supercenter.yml
@@ -1,10 +1,10 @@
-id: 5315601405
-type: node
-latitude: 33.75723
-longitude: -90.71213
+id: 984788588
+type: way
+latitude: 33.75807
+longitude: -90.71275
 postcode: "38732"
 city: Cleveland
-street: "North Davis Avenue"
+street: "North Davis Ave;North Davis Avenue"
 housenumber: 710
 phone: "+1-662-843-6567"
 opening_hours: "24/7"
