--- a/data/cities/indianola/walmart-supercenter.yml
+++ b/data/cities/indianola/walmart-supercenter.yml
@@ -1,7 +1,7 @@
-id: 5315598288
-type: node
-latitude: 33.45949
-longitude: -90.66322
+id: 1109177112
+type: way
+latitude: 33.45934
+longitude: -90.66429
 postcode: "38751"
 city: Indianola
 street: "Highway 82 West"
