--- a/data/cities/yazoo-city/walmart-supercenter.yml
+++ b/data/cities/yazoo-city/walmart-supercenter.yml
@@ -1,7 +1,7 @@
-id: 5315598933
-type: node
-latitude: 32.87668
-longitude: -90.39666
+id: 795169193
+type: way
+latitude: 32.87674
+longitude: -90.39613
 postcode: "39194"
 city: Yazoo City
 street: "Grand Avenue"
