update content and data

--- a/data/cities/tupelo/walmart-neighborhood-market.yml
+++ b/data/cities/tupelo/walmart-neighborhood-market.yml
@@ -1,7 +1,7 @@
-id: 5315597976
-type: node
-latitude: 34.2542
-longitude: -88.7146
+id: 860468806
+type: way
+latitude: 34.25493
+longitude: -88.71443
 postcode: "38801"
 city: Tupelo
 street: "South Gloster Street"
