--- a/data/cities/greenwood/walmart-supercenter.yml
+++ b/data/cities/greenwood/walmart-supercenter.yml
@@ -1,7 +1,7 @@
-id: 5315596508
-type: node
-latitude: 33.52999
-longitude: -90.22143
+id: 234813585
+type: way
+latitude: 33.53073
+longitude: -90.22212
 postcode: "38930"
 city: Greenwood
 street: "Highway 82 West"
