--- a/data/cities/tupelo/walmart-supercenter.yml
+++ b/data/cities/tupelo/walmart-supercenter.yml
@@ -1,11 +1,11 @@
-id: 3522905149
+id: 3522930508
 type: node
-latitude: 34.25819
-longitude: -88.74132
-postcode: "38801"
+latitude: 34.30882
+longitude: -88.70989
+postcode: "38804"
 city: Tupelo
-street: "West Main Street"
-housenumber: 2270
-phone: "+1-662-844-4011"
+street: "North Gloster Street"
+housenumber: 3929
+phone: "+1-662-840-8401"
 opening_hours: "24/7"
-website: "https://www.walmart.com/store/391/tupelo-ms/whats-new"
+website: "https://www.walmart.com/store/258/tupelo-ms/whats-new"
