update content and data

--- a/data/cities/hickory-flat/dollar-general.yml
+++ b/data/cities/hickory-flat/dollar-general.yml
@@ -1,7 +1,7 @@
-id: 2122117586
-type: node
-latitude: 34.6183
-longitude: -89.18473
+id: 1077522506
+type: way
+latitude: 34.61837
+longitude: -89.18494
 postcode: "38633"
 city: Hickory Flat
 street: "State Highway 5"
