update content and data

--- a/data/cities/oxford/my-oxford-storage.yml
+++ b/data/cities/oxford/my-oxford-storage.yml
@@ -1,11 +1,11 @@
-id: 5703286634
+id: 5745572212
 type: node
-latitude: 34.35936
-longitude: -89.49887
+latitude: 34.34857
+longitude: -89.45371
 postcode: "38655"
 city: Oxford
-street: ""
-housenumber: 19
+street: "Highway 6 East"
+housenumber: 347
 phone: ""
 opening_hours: ""
 website: ""
