--- a/data/cities/ocean-springs/aldi.yml
+++ b/data/cities/ocean-springs/aldi.yml
@@ -7,5 +7,5 @@ city: Ocean Springs
 street: "Bienville Boulevard"
 housenumber: 3801
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Su 09:00-20:00"
 website: ""
