update content and data

--- a/data/cities/amory/walmart-supercenter.yml
+++ b/data/cities/amory/walmart-supercenter.yml
@@ -6,6 +6,6 @@ postcode: "38821"
 city: Amory
 street: "Highway 278 East"
 housenumber: 1515
-phone: "+1-662-256-1590"
+phone: ""
 opening_hours: "24/7"
 website: "https://www.walmart.com/store/118/amory-ms/whats-new"
