--- a/data/cities/hattiesburg/circle-k.yml
+++ b/data/cities/hattiesburg/circle-k.yml
@@ -1,11 +1,11 @@
-id: 542693914
+id: 654581072
 type: way
-latitude: 31.2567
-longitude: -89.33843
+latitude: 31.32268
+longitude: -89.36409
 postcode: "39402"
 city: Hattiesburg
-street: "US 11"
-housenumber: 4050
-phone: ""
+street: "Hardy Street"
+housenumber: 4904
+phone: "+1 (601) 268-1073"
 opening_hours: "24/7"
 website: ""
