--- a/data/cities/brandon/womack-auto-sales.yml
+++ b/data/cities/brandon/womack-auto-sales.yml
@@ -1,11 +1,11 @@
-id: 514590640
+id: 430275552
 type: way
-latitude: 32.2733
-longitude: -89.99017
+latitude: 32.27286
+longitude: -89.99056
 postcode: "39042"
 city: Brandon
 street: "West Government Street"
-housenumber: 358
+housenumber: 
 phone: ""
 opening_hours: ""
 website: ""
