--- a/data/cities/toomsuba/kewanee-1-stop.yml
+++ b/data/cities/toomsuba/kewanee-1-stop.yml
@@ -7,5 +7,5 @@ city: Toomsuba
 street: "US 11"
 housenumber: 5267
 phone: "+1 (601) 632-4524"
-opening_hours: ""
+opening_hours: "Mo-Su 06:00-21:00"
 website: ""
