update content and data

--- a/data/cities/oxford/your-extra-closet.yml
+++ b/data/cities/oxford/your-extra-closet.yml
@@ -1,11 +1,11 @@
-id: 5703264967
+id: 5775466475
 type: node
-latitude: 34.33388
-longitude: -89.51239
+latitude: 34.39028
+longitude: -89.54937
 postcode: "38655"
 city: Oxford
-street: "Industrial Park Drive"
-housenumber: 8
+street: ""
+housenumber: 77
 phone: ""
 opening_hours: ""
 website: ""
