update content and data

--- a/data/cities/olive-branch/aldi.yml
+++ b/data/cities/olive-branch/aldi.yml
@@ -8,4 +8,4 @@ street: "Goodman Road"
 housenumber: 6626
 phone: ""
 opening_hours: "Mo, We, Fr-Su 09:00-20:00, Tu, Th 08:30-20:00"
-website: "https://www.aldi.us/"
+website: "https://stores.aldi.us/ms/olive-branch/6626-goodman-rd"
