--- a/data/cities/horn-lake/aldi.yml
+++ b/data/cities/horn-lake/aldi.yml
@@ -8,4 +8,4 @@ street: "Goodman Road West"
 housenumber: 4065
 phone: ""
 opening_hours: "Mo, We, Fr-Su 09:00-20:00, Tu, Th 08:30-20:00"
-website: "https://www.aldi.us/"
+website: "https://stores.aldi.us/ms/horn-lake/4065-goodman-road-west"
