--- a/data/cities/tupelo/aldi.yml
+++ b/data/cities/tupelo/aldi.yml
@@ -1,11 +1,11 @@
 id: 8663485594
 type: node
-latitude: 34.31372
-longitude: -88.70604
+latitude: 34.31364
+longitude: -88.70575
 postcode: "38804"
 city: Tupelo
 street: "North Gloster Street"
 housenumber: 3990
 phone: ""
 opening_hours: "Mo, We, Fr-Su 09:00-20:00, Tu, Th 08:30-20:00"
-website: "https://www.aldi.us/"
+website: "https://stores.aldi.us/ms/tupelo/3990-n-gloster-st"
