update content and data

--- a/data/cities/oxford/dollar-general.yml
+++ b/data/cities/oxford/dollar-general.yml
@@ -1,11 +1,11 @@
-id: 5640627784
+id: 5703515288
 type: node
-latitude: 34.37778
-longitude: -89.51171
+latitude: 34.3605
+longitude: -89.50834
 postcode: "38655"
 city: Oxford
-street: "North Lamar Boulevard"
-housenumber: 
+street: "University Avenue"
+housenumber: 1906
 phone: ""
 opening_hours: ""
 website: ""
