--- a/data/cities/oxford/kroger.yml
+++ b/data/cities/oxford/kroger.yml
@@ -8,4 +8,4 @@ street: "University Avenue"
 housenumber: 2013
 phone: "+1 662 236 9956"
 opening_hours: ""
-website: "https://www.kroger.com/"
+website: "https://www.kroger.com/stores/grocery/ms/oxford/oxford/025/00473"
