--- a/data/cities/oxford/my-oxford-storage.yml
+++ b/data/cities/oxford/my-oxford-storage.yml
@@ -1,11 +1,11 @@
-id: 5745572212
+id: 5706104618
 type: node
-latitude: 34.34857
-longitude: -89.45371
+latitude: 34.37801
+longitude: -89.52731
 postcode: "38655"
 city: Oxford
-street: "Highway 6 East"
-housenumber: 347
+street: "Molly Barr Road"
+housenumber: 727
 phone: ""
 opening_hours: ""
 website: ""
