--- a/data/cities/southaven/kroger.yml
+++ b/data/cities/southaven/kroger.yml
@@ -8,4 +8,4 @@ street: "Goodman Road East"
 housenumber: 3095
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.kroger.com/stores/grocery/ms/southaven/goodman-getwell/025/00464"
