--- a/data/cities/vicksburg/kroger.yml
+++ b/data/cities/vicksburg/kroger.yml
@@ -8,4 +8,4 @@ street: "Pemberton Square Boulevard"
 housenumber: 3408
 phone: ""
 opening_hours: "Mo-Su 06:00-01:00"
-website: ""
+website: "https://www.kroger.com/stores/grocery/ms/vicksburg/pemberton-sq/025/00466"
