--- a/data/cities/brandon/kroger.yml
+++ b/data/cities/brandon/kroger.yml
@@ -8,4 +8,4 @@ street: "Spillway Circle"
 housenumber: 1070
 phone: ""
 opening_hours: "06:00-01:00"
-website: ""
+website: "https://www.kroger.com/stores/grocery/ms/brandon/spillway/025/00493"
