--- a/data/cities/greenville/kroger.yml
+++ b/data/cities/greenville/kroger.yml
@@ -8,4 +8,4 @@ street: "Highway 1 S"
 housenumber: 1778
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.kroger.com/stores/grocery/ms/greenville/greenville/025/00429"
