--- a/data/cities/madison/kroger.yml
+++ b/data/cities/madison/kroger.yml
@@ -8,4 +8,4 @@ street: ""
 housenumber: 
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.kroger.com/stores/grocery/ms/madison/colony-crossing/025/00472"
