update content and data

--- a/data/cities/jackson/discount-car-audio-highway-80-west.yml
+++ b/data/cities/jackson/discount-car-audio-highway-80-west.yml
@@ -1,10 +1,10 @@
-id: 4474785284
+id: 4474810393
 type: node
-latitude: 32.28561
-longitude: -90.21163
+latitude: 32.28705
+longitude: -90.21101
 postcode: "39204"
 city: Jackson
-street: "US-80"
+street: "Highway 80 West"
 housenumber: 1510
 phone: "601-969-3100"
 opening_hours: ""
