--- a/data/cities/oxford/my-oxford-storage.yml
+++ b/data/cities/oxford/my-oxford-storage.yml
@@ -1,11 +1,11 @@
-id: 5706104618
+id: 5745572212
 type: node
-latitude: 34.37801
-longitude: -89.52731
+latitude: 34.34857
+longitude: -89.45371
 postcode: "38655"
 city: Oxford
-street: "Molly Barr Road"
-housenumber: 727
+street: "Highway 6 East"
+housenumber: 347
 phone: ""
 opening_hours: ""
 website: ""
