--- a/data/cities/wiggins/piggly-wiggly.yml
+++ b/data/cities/wiggins/piggly-wiggly.yml
@@ -8,4 +8,4 @@ street: "West Central Avenue"
 housenumber: 530C
 phone: "+1 601 928 4540"
 opening_hours: ""
-website: "http://www.pigglywiggly.com/store/530c-west-central-avenuewigginsms"
+website: "https://www.pigglywiggly.com/store/530c-west-central-avenuewigginsms"
