update content and data

--- a/data/cities/glucksadt/bicycle-revolution.yml
+++ b/data/cities/glucksadt/bicycle-revolution.yml
@@ -8,4 +8,4 @@ street: "Dee Drive, Suite C"
 housenumber: 113
 phone: "769.300.4721"
 opening_hours: ""
-website: "startarevolution.net"
+website: "https://startarevolution.net/"
