--- a/data/cities/ridgeland/the-bike-crossing.yml
+++ b/data/cities/ridgeland/the-bike-crossing.yml
@@ -8,4 +8,4 @@ street: "West Jack St, 1-D"
 housenumber: 115
 phone: "601.856.0049"
 opening_hours: ""
-website: "thebikecrossing.com"
+website: "https://www.thebikecrossing.com/"
