--- a/data/cities/summit/wizard-electronics.yml
+++ b/data/cities/summit/wizard-electronics.yml
@@ -8,4 +8,4 @@ street: "Robb Street"
 housenumber: 822
 phone: "+1-601-276-9973"
 opening_hours: ""
-website: "http://wizardelec.com"
+website: "https://www.wizardelec.com/"
