update content and data

--- a/data/cities/oxford/car-mart-of-oxford.yml
+++ b/data/cities/oxford/car-mart-of-oxford.yml
@@ -8,4 +8,4 @@ street: "Jackson Avenue West"
 housenumber: 2612
 phone: "1 662 259 8040"
 opening_hours: ""
-website: "http://www.car-mart.com/"
+website: "https://www.car-mart.com/"
