--- a/data/cities/oxford/sunsations.yml
+++ b/data/cities/oxford/sunsations.yml
@@ -8,4 +8,4 @@ street: "Jackson Avenue West"
 housenumber: 2134
 phone: "+1 662 259 2900"
 opening_hours: ""
-website: "http://tansunsations.com/"
+website: "https://tansunsations.com/"
