--- a/data/cities/tupelo/trails-and-trends.yml
+++ b/data/cities/tupelo/trails-and-trends.yml
@@ -8,4 +8,4 @@ street: "Market Center Drive, Suite 200"
 housenumber: 3870 Market Center Drive, Suite 200
 phone: "662.205.4921"
 opening_hours: ""
-website: "trailsandtreads.ms"
+website: "https://trailsandtreads.ms/"
