--- a/data/cities/oxford/goodwill.yml
+++ b/data/cities/oxford/goodwill.yml
@@ -8,4 +8,4 @@ street: "Jackson Avenue West"
 housenumber: 2540
 phone: "1 662 513 6458"
 opening_hours: ""
-website: "http://www.goodwill.org/"
+website: "https://www.goodwill.org/"
