--- a/data/cities/oxford/hollywood-feed.yml
+++ b/data/cities/oxford/hollywood-feed.yml
@@ -8,4 +8,4 @@ street: "Jackson Avenue West"
 housenumber: 2210
 phone: "1 662 638 0435"
 opening_hours: ""
-website: "http://www.hollywoodfeed.com/"
+website: "https://www.hollywoodfeed.com/"
