--- a/data/cities/oxford/magnolia-lighting.yml
+++ b/data/cities/oxford/magnolia-lighting.yml
@@ -8,4 +8,4 @@ street: "Jackson Avenue West"
 housenumber: 2206
 phone: "1 662 236 0025"
 opening_hours: ""
-website: "http://www.magnolialighting.com/"
+website: "https://magnolialighting.com/"
