--- a/data/cities/pontotoc/piggly-wiggly.yml
+++ b/data/cities/pontotoc/piggly-wiggly.yml
@@ -8,4 +8,4 @@ street: "West Oxford Street"
 housenumber: 237
 phone: "+16624894282"
 opening_hours: ""
-website: "http://www.pigglywiggly.com/"
+website: "https://www.pigglywiggly.com/"
