--- a/data/cities/hattiesburg/minit-mart-38.yml
+++ b/data/cities/hattiesburg/minit-mart-38.yml
@@ -8,4 +8,4 @@ street: "US 98"
 housenumber: 7183
 phone: "+1 (601) 264-9579"
 opening_hours: ""
-website: "http://www.minit-mart.com/"
+website: "https://www.minit-mart.com/"
