--- a/data/cities/hattiesburg/sullivans-grocery-north-main-street.yml
+++ b/data/cities/hattiesburg/sullivans-grocery-north-main-street.yml
@@ -8,4 +8,4 @@ street: "North Main Street"
 housenumber: 1224
 phone: "+1 (601) 582-7615"
 opening_hours: "Mo-Su 07:00-20:00"
-website: "sullivansgroc.com/hattiesburg-ms-main/"
+website: "https://sullivansgroc.com/hattiesburg-ms-main/"
