update content and data

--- a/data/cities/diberville/academy-sports-outdoors.yml
+++ b/data/cities/diberville/academy-sports-outdoors.yml
@@ -8,4 +8,4 @@ street: "Lamey Bridge Road"
 housenumber: 
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.academy.com/storelocator/mississippi/diberville/store-0159"
