--- a/data/cities/hattiesburg/advance-auto-parts.yml
+++ b/data/cities/hattiesburg/advance-auto-parts.yml
@@ -8,4 +8,4 @@ street: "Broadway Drive"
 housenumber: 300
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://stores.advanceautoparts.com/ms/hattiesburg/300-broadway-dr"
