--- a/data/cities/hattiesburg/autozone.yml
+++ b/data/cities/hattiesburg/autozone.yml
@@ -8,4 +8,4 @@ street: "Broadway Drive"
 housenumber: 305
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.autozone.com/locations/ms/hattiesburg/305-broadway-dr.html"
