--- a/data/cities/oxford/advance-auto-parts-jackson-avenue-west.yml
+++ b/data/cities/oxford/advance-auto-parts-jackson-avenue-west.yml
@@ -8,4 +8,4 @@ street: "Jackson Avenue West"
 housenumber: 2590
 phone: "+1-662-234-1068"
 opening_hours: ""
-website: "https://shop.advanceautoparts.com/"
+website: "https://stores.advanceautoparts.com/ms/oxford/2590-jackson-ave-w"
