--- a/data/cities/oxford/advance-auto-parts.yml
+++ b/data/cities/oxford/advance-auto-parts.yml
@@ -8,4 +8,4 @@ street: "West Oxford Loop"
 housenumber: 2706
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://stores.advanceautoparts.com/ms/oxford/2706-w-oxford-loop"
