--- a/data/cities/hattiesburg/advance-auto-parts-hardy-street.yml
+++ b/data/cities/hattiesburg/advance-auto-parts-hardy-street.yml
@@ -8,4 +8,4 @@ street: "Hardy Street"
 housenumber: 5060
 phone: "+1 (601) 264-4690"
 opening_hours: "Mo-Sa 07:00-20:00; Su 09:00-19:00"
-website: "http://www.advanceautoparts.com/"
+website: "https://stores.advanceautoparts.com/ms/hattiesburg/5060-hardy-st"
