--- a/data/cities/purvis/autozone.yml
+++ b/data/cities/purvis/autozone.yml
@@ -8,4 +8,4 @@ street: "US 11"
 housenumber: 5774
 phone: "+1-601-794-4068"
 opening_hours: "Mo-Sa 07:00-21:00; Su 08:00-19:00"
-website: ""
+website: "https://www.autozone.com/locations/ms/purvis/5774-us-hwy-11.html"
