--- a/data/cities/wiggins/advance-auto-parts.yml
+++ b/data/cities/wiggins/advance-auto-parts.yml
@@ -8,4 +8,4 @@ street: "West Central Avenue"
 housenumber: 614
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://stores.advanceautoparts.com/ms/wiggins/614-central-ave-w"
