update content and data

--- a/data/cities/tupelo/aldi.yml
+++ b/data/cities/tupelo/aldi.yml
@@ -1,7 +1,7 @@
-id: 8663485594
-type: node
-latitude: 34.31364
-longitude: -88.70575
+id: 1098119164
+type: way
+latitude: 34.31341
+longitude: -88.70592
 postcode: "38804"
 city: Tupelo
 street: "North Gloster Street"
