--- a/data/cities/madison/dollar-tree.yml
+++ b/data/cities/madison/dollar-tree.yml
@@ -8,4 +8,4 @@ street: "Grand View Boulevard"
 housenumber: 
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollartree.com/locations/ms/madison/2730/"
