--- a/data/cities/oxford/dollar-tree.yml
+++ b/data/cities/oxford/dollar-tree.yml
@@ -8,4 +8,4 @@ street: "Jackson Avenue West"
 housenumber: 2560
 phone: "+1-662-281-8407"
 opening_hours: ""
-website: "https://locations.dollartree.com/"
+website: "https://www.dollartree.com/locations/ms/oxford/454/"
