update content and data

--- a/data/cities/laurel/advance-auto-parts.yml
+++ b/data/cities/laurel/advance-auto-parts.yml
@@ -8,4 +8,4 @@ street: "North 16th Avenue"
 housenumber: 132
 phone: "601 428 8270"
 opening_hours: "Multiple"
-website: "stores.advanceautoparts.com"
+website: "https://stores.advanceautoparts.com"
