--- a/data/cities/laurel/carter-motorcars.yml
+++ b/data/cities/laurel/carter-motorcars.yml
@@ -8,4 +8,4 @@ street: "South 16th Avenue"
 housenumber: 115
 phone: "601 428 8400"
 opening_hours: "Mo-Fr 08:00-18:00"
-website: "cartermotorcars.com"
+website: "https://cartermotorcars.com/"
