--- a/data/cities/laurel/the-gold-mine-pawn-and-gun.yml
+++ b/data/cities/laurel/the-gold-mine-pawn-and-gun.yml
@@ -8,4 +8,4 @@ street: "North 16th Avenue"
 housenumber: 330
 phone: "601 342 2880"
 opening_hours: "Mo-Sa 09:00-17:00"
-website: "thegoldminepawnandgun.com"
+website: "https://thegoldminepawnandgun.com/"
