--- a/data/cities/laurel/funky-shoes.yml
+++ b/data/cities/laurel/funky-shoes.yml
@@ -8,4 +8,4 @@ street: "South 16th Avenue"
 housenumber: 105
 phone: "601 649 4060"
 opening_hours: "Mo-Fr 10:00-17:30 Sa 10:00-16:00"
-website: "funkyshoeslaurel.com"
+website: "https://funkyshoeslaurel.com/"
