--- a/data/cities/laurel/piggly-wiggly.yml
+++ b/data/cities/laurel/piggly-wiggly.yml
@@ -8,4 +8,4 @@ street: "North 16th Avenue"
 housenumber: 321
 phone: "601 425 3111"
 opening_hours: "Mo-Su 06:00-21:00"
-website: "pigglywiggly.com"
+website: "https://pigglywiggly.com/"
