--- a/data/cities/hattiesburg/target.yml
+++ b/data/cities/hattiesburg/target.yml
@@ -6,6 +6,6 @@ postcode: "39402"
 city: Hattiesburg
 street: "US 98"
 housenumber: 6143
-phone: "+1 (601) 261-5298"
+phone: "+1-601-261-5298"
 opening_hours: "Mo-Th 07:00-22:00; Fr-Su 07:00-23:00"
 website: ""
