update content and data

--- a/data/cities/mendenhall/dabbs-cannabis-dispensary.yml
+++ b/data/cities/mendenhall/dabbs-cannabis-dispensary.yml
@@ -7,5 +7,5 @@ city: Mendenhall
 street: "Simpson Hwy 149"
 housenumber: 1510
 phone: "601-675-1240"
-opening_hours: "Mon To Sat  – 09.00am – 07.00pm || Sun : Closed"
+opening_hours: "Mo-Sa 09:00-19:00"
 website: "https://www.dabbscannabisdispensary.com/"
