update content and data

--- a/data/cities/oxford/hybrid-cbd.yml
+++ b/data/cities/oxford/hybrid-cbd.yml
@@ -7,5 +7,5 @@ city: Oxford
 street: "Jackson Ave W"
 housenumber: 1801
 phone: "662-380-5310"
-opening_hours: "Mon-Sun: 10:30am- 7pm"
+opening_hours: "Mo-Su 10:30-19:00"
 website: "https://hybridcbdms.com/"
