--- a/data/cities/tupelo/tag-truck-service.yml
+++ b/data/cities/tupelo/tag-truck-service.yml
@@ -7,5 +7,5 @@ city: Tupelo
 street: "McCullough Boulevard"
 housenumber: 4600
 phone: "662-844-3262"
-opening_hours: "Mo-Fr 07:00-18:00 Sa 07:00-15:30"
+opening_hours: "Mo-Fr 07:00-18:00; Sa 07:00-15:30"
 website: "https://www.tntxtruck.com/Locations/Mississippi/Tupelo"
