update content and data

--- a/data/cities/hattiesburg/dandy-dans.yml
+++ b/data/cities/hattiesburg/dandy-dans.yml
@@ -1,11 +1,11 @@
 id: 318523900
 type: way
-latitude: 31.32227
-longitude: -89.36799
+latitude: 31.32228
+longitude: -89.36798
 postcode: "39402"
 city: Hattiesburg
 street: "Hardy Street"
-housenumber: 
+housenumber: 5000
 phone: ""
 opening_hours: ""
 website: ""
