--- a/data/cities/hattiesburg/c-spire.yml
+++ b/data/cities/hattiesburg/c-spire.yml
@@ -1,11 +1,11 @@
-id: 7018065655
+id: 2871349355
 type: node
-latitude: 31.31088
-longitude: -89.31952
-postcode: "39401"
+latitude: 31.32257
+longitude: -89.36556
+postcode: "39402"
 city: Hattiesburg
-street: "US 49"
-housenumber: 5910
-phone: "+1 (855) 277-4735"
+street: "Hardy Street"
+housenumber: 4930
+phone: ""
 opening_hours: "Mo-Sa 09:00-19:00"
-website: "https://www.cspire.com/cms/stores/200095/South-Hattiesburg/"
+website: ""
