update content and data

--- a/data/cities/cleveland/walmart-supercenter.yml
+++ b/data/cities/cleveland/walmart-supercenter.yml
@@ -4,7 +4,7 @@ latitude: 33.75807
 longitude: -90.71275
 postcode: "38732"
 city: Cleveland
-street: "North Davis Ave;North Davis Avenue"
+street: "North Davis Avenue"
 housenumber: 710
 phone: "+1-662-843-6567"
 opening_hours: "24/7"
