update content and data

--- a/data/cities/oxford/loft.yml
+++ b/data/cities/oxford/loft.yml
@@ -8,4 +8,4 @@ street: "Jackson Avenue West"
 housenumber: 2317
 phone: "+1-662-234-4527"
 opening_hours: ""
-website: "https://www.loft.com/"
+website: ""
