--- a/data/cities/oxford/shoe-carnival.yml
+++ b/data/cities/oxford/shoe-carnival.yml
@@ -8,4 +8,4 @@ street: "Merchants Drive"
 housenumber: 800
 phone: "+1-662-236-6670"
 opening_hours: ""
-website: "https://www.shoecarnival.com/home"
+website: ""
