update content and data

--- a/data/cities/madison/cato.yml
+++ b/data/cities/madison/cato.yml
@@ -8,4 +8,4 @@ street: "Grand View Boulevard"
 housenumber: 
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://stores.catofashions.com/ms/madison/123-grandview-boulevard"
