--- a/data/cities/oxford/cato.yml
+++ b/data/cities/oxford/cato.yml
@@ -8,4 +8,4 @@ street: "Jackson Avenue West"
 housenumber: 2550
 phone: "+1-662-513-6249"
 opening_hours: ""
-website: "https://www.catofashions.com/"
+website: "https://stores.catofashions.com/ms/oxford/2550-west-jackson-avenue"
