--- a/data/cities/madison/gamestop.yml
+++ b/data/cities/madison/gamestop.yml
@@ -8,4 +8,4 @@ street: "Grand View Boulevard"
 housenumber: 123
 phone: "+1-601-605-0995"
 opening_hours: "Mo-Sa 10:00-21:00; Su 11:00-18:00"
-website: "https://www.gamestop.com/"
+website: "https://www.gamestop.com/store/us/ms/madison/2704/grandview-blvd-madison-gamestop"
