--- a/data/cities/oxford/gamestop.yml
+++ b/data/cities/oxford/gamestop.yml
@@ -8,4 +8,4 @@ street: "Jackson Avenue West"
 housenumber: 2580
 phone: "+1-662-236-2886"
 opening_hours: "Mo-Su 10:00-21:00"
-website: "https://www.gamestop.com/"
+website: "https://www.gamestop.com/store/us/ms/oxford/2979/oxford-marketplace-gamestop"
