--- a/data/cities/ridgeland/gamestop.yml
+++ b/data/cities/ridgeland/gamestop.yml
@@ -8,4 +8,4 @@ street: "East County Line Road"
 housenumber: 1060
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.gamestop.com/store/us/ms/ridgeland/5135/centre-park-gamestop"
