update content and data

--- a/data/cities/laurel/cindys-nails.yml
+++ b/data/cities/laurel/cindys-nails.yml
@@ -7,5 +7,5 @@ city: Laurel
 street: "South 16th Avenue"
 housenumber: 105
 phone: "601 425 0010"
-opening_hours: "Multiple"
+opening_hours: ""
 website: ""
