--- a/data/cities/richland/dabbs-cannabis-dispensary.yml
+++ b/data/cities/richland/dabbs-cannabis-dispensary.yml
@@ -7,5 +7,5 @@ city: Richland
 street: "US 49"
 housenumber: 736
 phone: "7692515096"
-opening_hours: "Mon To Sat  – 09.00am – 07.00pm || Sun : Closed"
+opening_hours: "Mo-Sa 09:00-19:00; Su closed"
 website: "https://www.dabbscannabisdispensary.com/richland"
