--- a/data/cities/tupelo/muffler-master.yml
+++ b/data/cities/tupelo/muffler-master.yml
@@ -7,5 +7,5 @@ city: Tupelo
 street: "MS-371"
 housenumber: 1253
 phone: "+1 -662-841-1799"
-opening_hours: "Tuesday-Thursday: 8:30AM to 4:30PM"
+opening_hours: "Tu-Th 08:30-16:30"
 website: "https://mufflermasterms.com"
