--- a/data/cities/laurel/advance-auto-parts.yml
+++ b/data/cities/laurel/advance-auto-parts.yml
@@ -7,5 +7,5 @@ city: Laurel
 street: "North 16th Avenue"
 housenumber: 132
 phone: "601 428 8270"
-opening_hours: "Multiple"
+opening_hours: ""
 website: "https://stores.advanceautoparts.com"
