--- a/data/cities/laurel/country-thrift-store.yml
+++ b/data/cities/laurel/country-thrift-store.yml
@@ -7,5 +7,5 @@ city: Laurel
 street: "Congress Street"
 housenumber: 1604
 phone: "601 335 5867"
-opening_hours: "Mo-Fr 07:00-17:00 Sa 11:00-17:00"
+opening_hours: "Mo-Fr 07:00-17:00; Sa 11:00-17:00"
 website: ""
