--- a/data/cities/laurel/georges-sporting-goods.yml
+++ b/data/cities/laurel/georges-sporting-goods.yml
@@ -7,5 +7,5 @@ city: Laurel
 street: "North 16th Avenue"
 housenumber: 301
 phone: "601 425 1138"
-opening_hours: "Mo-Fr 08:00-17:30 Sa 08:00-13:00"
+opening_hours: "Mo-Fr 08:00-17:30; Sa 08:00-13:00"
 website: ""
