--- a/data/cities/laurel/loanmax-title-loans.yml
+++ b/data/cities/laurel/loanmax-title-loans.yml
@@ -7,5 +7,5 @@ city: Laurel
 street: "South 16th Avenue"
 housenumber: 119
 phone: "601 428 1480"
-opening_hours: "Mo-Fr 10:00-18:00 Sa 9:00-14:00"
+opening_hours: "Mo-Fr 10:00-18:00; Sa 09:00-14:00"
 website: "https://www.loanmaxtitleloans.net"
