--- a/data/cities/laurel/mississippi-title-loans-inc.yml
+++ b/data/cities/laurel/mississippi-title-loans-inc.yml
@@ -7,5 +7,5 @@ city: Laurel
 street: "North 16th Avenue"
 housenumber: 104
 phone: "601 425 0020"
-opening_hours: "Mo-Fr 10:00-18:00 Sa 10:00-15:00"
+opening_hours: "Mo-Fr 10:00-18:00; Sa 10:00-15:00"
 website: "mississippititleloansinc.com"
