--- a/data/cities/laurel/speedee-cash.yml
+++ b/data/cities/laurel/speedee-cash.yml
@@ -7,5 +7,5 @@ city: Laurel
 street: "North 16th Avenue"
 housenumber: 214
 phone: "601 428 4540"
-opening_hours: "Mo-Fr 09:00-18:00 Sa 09:00-14:00"
+opening_hours: "Mo-Fr 09:00-18:00; Sa 09:00-14:00"
 website: ""
