--- a/data/cities/yazoo-city/davis-feed-and-farm-supply.yml
+++ b/data/cities/yazoo-city/davis-feed-and-farm-supply.yml
@@ -4,8 +4,8 @@ latitude: 32.84878
 longitude: -90.43525
 postcode: "39194"
 city: Yazoo City
-street: "412 S Industrial Pkwy"
-housenumber: 
+street: "South Industrial Parkway"
+housenumber: 412
 phone: "662-746-9322"
-opening_hours: "Mo-Tu, Th-Fr: :07:00-17:30, We 07:30-17:30, Sa: 07:30-13:30"
+opening_hours: "Mo-Tu, Th-Fr: 07:00-17:30, We 07:30-17:30, Sa: 07:30-13:30"
 website: "https://davisfeedandfarmsupply.com"
