update content and data

--- a/data/cities/boyle/dollar-general.yml
+++ b/data/cities/boyle/dollar-general.yml
@@ -8,4 +8,4 @@ street: "North Gaines Highway"
 housenumber: 403
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/ms/boyle/9375"
