--- a/data/cities/brandon/dollar-general-hwy-471.yml
+++ b/data/cities/brandon/dollar-general-hwy-471.yml
@@ -8,4 +8,4 @@ street: "Hwy 471"
 housenumber: 1042
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/ms/brandon/10735"
