--- a/data/cities/cleveland/dollar-general.yml
+++ b/data/cities/cleveland/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Highway 8"
 housenumber: 1301
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/ms/cleveland/6869"
