--- a/data/cities/foxworth/dollar-general.yml
+++ b/data/cities/foxworth/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Highway 98 West"
 housenumber: 2184
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/ms/foxworth/10281"
