--- a/data/cities/gulfport/cvs-pharmacy.yml
+++ b/data/cities/gulfport/cvs-pharmacy.yml
@@ -1,11 +1,11 @@
-id: 166305999
+id: 166047642
 type: way
-latitude: 30.37964
-longitude: -89.09218
-postcode: "39501"
+latitude: 30.44305
+longitude: -89.09775
+postcode: "39503"
 city: Gulfport
-street: "25th Avenue"
-housenumber: 2424
+street: "Highway 49"
+housenumber: 11022
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.cvs.com/store-locator/gulfport-ms-pharmacies/11022-hwy-49-gulfport-ms-39503/storeid=5908"
