--- a/data/cities/hattiesburg/cvs-pharmacy.yml
+++ b/data/cities/hattiesburg/cvs-pharmacy.yml
@@ -8,4 +8,4 @@ street: "Hardy Street"
 housenumber: 2507
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.cvs.com/store-locator/hattiesburg-ms-pharmacies/2507-hardy-st-hattiesburg-ms-39401/storeid=3124"
