--- a/data/cities/hattiesburg/dollar-general-elks-lake-road.yml
+++ b/data/cities/hattiesburg/dollar-general-elks-lake-road.yml
@@ -8,4 +8,4 @@ street: "Elks Lake Road"
 housenumber: 508
 phone: ""
 opening_hours: ""
-website: "https://www.dollargeneral.com/"
+website: "https://www.dollargeneral.com/store-directory/ms/hattiesburg/6986"
