--- a/data/cities/hattiesburg/dollar-general-hardy-street.yml
+++ b/data/cities/hattiesburg/dollar-general-hardy-street.yml
@@ -8,4 +8,4 @@ street: "Hardy Street"
 housenumber: 1909
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/ms/hattiesburg/1039"
