--- a/data/cities/hattiesburg/dollar-general.yml
+++ b/data/cities/hattiesburg/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Edwards Street"
 housenumber: 1204
 phone: ""
 opening_hours: "Mo-Su 08:00-22:00"
-website: "https://www.dollargeneral.com/"
+website: "https://www.dollargeneral.com/store-directory/ms/hattiesburg/18752"
