--- a/data/cities/laurel/dollar-general-north-16th-avenue.yml
+++ b/data/cities/laurel/dollar-general-north-16th-avenue.yml
@@ -8,4 +8,4 @@ street: "North 16th Avenue"
 housenumber: 317
 phone: "601 651 3790"
 opening_hours: "Mo-Su 08:00-21:00"
-website: ""
+website: "https://www.dollargeneral.com/store-directory/ms/laurel/4813"
