--- a/data/cities/leakesville/dollar-general.yml
+++ b/data/cities/leakesville/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Main Street"
 housenumber: 710
 phone: "+1 (601) 394-4934"
 opening_hours: "Mo-Su 07:00-22:00"
-website: "https://www.dollargeneral.com/"
+website: "https://www.dollargeneral.com/store-directory/ms/leakesville/7147"
