--- a/data/cities/pascagoula/dollar-general.yml
+++ b/data/cities/pascagoula/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Telephone Road"
 housenumber: 1603
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/ms/pascagoula/11694"
