--- a/data/cities/perkinston/dollar-general.yml
+++ b/data/cities/perkinston/dollar-general.yml
@@ -8,4 +8,4 @@ street: "MS 49"
 housenumber: 1534
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/ms/perkinston/16334"
