--- a/data/cities/port-gibson/dollar-general.yml
+++ b/data/cities/port-gibson/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Market St"
 housenumber: 1012
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/ms/port-gibson/4802"
