--- a/data/cities/bassfield/dollar-general.yml
+++ b/data/cities/bassfield/dollar-general.yml
@@ -8,4 +8,4 @@ street: "MS-42"
 housenumber: 4291
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/ms/bassfield/11094"
