--- a/data/cities/beaumont/dollar-general.yml
+++ b/data/cities/beaumont/dollar-general.yml
@@ -8,4 +8,4 @@ street: "MS 15"
 housenumber: 2401
 phone: "+1 (662) 454-4983"
 opening_hours: "Mo-Su 08:00-22:00"
-website: "http://www.dollargeneral.com/"
+website: "https://www.dollargeneral.com/store-directory/ms/beaumont/16725"
