--- a/data/cities/brandon/dollar-general.yml
+++ b/data/cities/brandon/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Spillway Road"
 housenumber: 1905
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/ms/brandon/8409"
