--- a/data/cities/buckatunna/dollar-general.yml
+++ b/data/cities/buckatunna/dollar-general.yml
@@ -8,4 +8,4 @@ street: "US 45"
 housenumber: 1842
 phone: "+1 (601) 884-0436"
 opening_hours: "Mo-Su 07:00-22:00"
-website: "https://www.dollargeneral.com/"
+website: "https://www.dollargeneral.com/store-directory/ms/buckatunna/15255"
