--- a/data/cities/cleveland/dollar-general-highway-8.yml
+++ b/data/cities/cleveland/dollar-general-highway-8.yml
@@ -8,4 +8,4 @@ street: "Highway 8"
 housenumber: 4091
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/ms/cleveland/10680"
