--- a/data/cities/columbia/walgreens.yml
+++ b/data/cities/columbia/walgreens.yml
@@ -8,4 +8,4 @@ street: "Highway 98 Bypass"
 housenumber: 1028
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.walgreens.com/locator/walgreens-1028+highway+98+byp-columbia-ms-39429/id=13609"
