--- a/data/cities/eastabutchie/dollar-general.yml
+++ b/data/cities/eastabutchie/dollar-general.yml
@@ -8,4 +8,4 @@ street: "US 11"
 housenumber: 2110
 phone: "+1 (601) 583-9912"
 opening_hours: "Mo-Su 08:00-22:00"
-website: "https://www.dollargeneral.com/"
+website: "https://www.dollargeneral.com/store-directory/ms/moselle/11356"
