--- a/data/cities/ellisville/dollar-general.yml
+++ b/data/cities/ellisville/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Hill Street"
 housenumber: 400
 phone: "+1 (601) 477-3899"
 opening_hours: "Mo-Su 07:00-23:00"
-website: "https://www.dollargeneral.com/"
+website: "https://www.dollargeneral.com/store-directory/ms/ellisville/1046"
