--- a/data/cities/enterprise/dollar-general.yml
+++ b/data/cities/enterprise/dollar-general.yml
@@ -8,4 +8,4 @@ street: "MS 513"
 housenumber: 100
 phone: "+1 (601) 659-9694"
 opening_hours: "Mo-Su 07:00-22:00"
-website: "https://www.dollargeneral.com/"
+website: "https://www.dollargeneral.com/store-directory/ms/enterprise/10878"
