--- a/data/cities/flora/dollar-general.yml
+++ b/data/cities/flora/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Progress Drive"
 housenumber: 117
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/ms/flora/875"
