--- a/data/cities/hattiesburg/dollar-general-lincoln-road.yml
+++ b/data/cities/hattiesburg/dollar-general-lincoln-road.yml
@@ -8,4 +8,4 @@ street: "Lincoln Road"
 housenumber: 2099
 phone: "+1 (601) 255-8955"
 opening_hours: "Mo-Su 08:00-22:00"
-website: "https://www.dollargeneral.com/"
+website: "https://www.dollargeneral.com/store-directory/ms/hattiesburg/4111"
