--- a/data/cities/hattiesburg/dollar-general-oak-grove-road.yml
+++ b/data/cities/hattiesburg/dollar-general-oak-grove-road.yml
@@ -8,4 +8,4 @@ street: "Oak Grove Road"
 housenumber: 2603
 phone: "+1 (601) 336-2804"
 opening_hours: "Tu-Th 08:00-22:00; Fr-Mo 08:00-23:00"
-website: "https://www.dollargeneral.com/"
+website: "https://www.dollargeneral.com/store-directory/ms/hattiesburg/9731"
