--- a/data/cities/hattiesburg/dollar-general-old-highway-11.yml
+++ b/data/cities/hattiesburg/dollar-general-old-highway-11.yml
@@ -8,4 +8,4 @@ street: "Old Highway 11"
 housenumber: 5182
 phone: "+1 (601) 329-0105"
 opening_hours: "Sa-Th 08:00-22:00; Fr 08:00-23:00"
-website: "https://www.dollargeneral.com/"
+website: "https://www.dollargeneral.com/store-directory/ms/hattiesburg/8238"
