--- a/data/cities/hattiesburg/dollar-general-us-49.yml
+++ b/data/cities/hattiesburg/dollar-general-us-49.yml
@@ -8,4 +8,4 @@ street: "US 49"
 housenumber: 
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/ms/hattiesburg/8538"
