--- a/data/cities/hattiesburg/dollar-general-west-4th-street.yml
+++ b/data/cities/hattiesburg/dollar-general-west-4th-street.yml
@@ -8,4 +8,4 @@ street: "West 4th Street"
 housenumber: 4899
 phone: "+1 (601) 336-2892"
 opening_hours: "Mo-Su 08:00-23:00"
-website: "https://www.dollargeneral.com/"
+website: "https://www.dollargeneral.com/store-directory/ms/hattiesburg/6473"
