--- a/data/cities/heidelberg/dollar-general.yml
+++ b/data/cities/heidelberg/dollar-general.yml
@@ -8,4 +8,4 @@ street: "North Pine Avenue"
 housenumber: 1711
 phone: "+1 (601) 787-4322"
 opening_hours: "Mo-Su 08:00-22:00"
-website: "https://www.dollargeneral.com/"
+website: "https://www.dollargeneral.com/store-directory/ms/heidelberg/9575"
