--- a/data/cities/hickory-flat/dollar-general.yml
+++ b/data/cities/hickory-flat/dollar-general.yml
@@ -8,4 +8,4 @@ street: "State Highway 5"
 housenumber: 39
 phone: ""
 opening_hours: "Mo-Su 08:00-22:00"
-website: ""
+website: "https://www.dollargeneral.com/store-directory/ms/hickory-flat/12443"
