--- a/data/cities/hurley/dollar-general.yml
+++ b/data/cities/hurley/dollar-general.yml
@@ -8,4 +8,4 @@ street: "MS-614"
 housenumber: 6800
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/ms/hurley/7947"
