--- a/data/cities/laurel/dollar-general-holifield-road.yml
+++ b/data/cities/laurel/dollar-general-holifield-road.yml
@@ -8,4 +8,4 @@ street: "Holifield Road"
 housenumber: 205
 phone: "+1 (601) 283-4903"
 opening_hours: "Mo-Su 09:00-21:00"
-website: "https://www.dollargeneral.com/"
+website: "https://www.dollargeneral.com/store-directory/ms/laurel/15868"
