--- a/data/cities/laurel/dollar-general.yml
+++ b/data/cities/laurel/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Indian Springs Road"
 housenumber: 4644
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/ms/laurel/10018"
