--- a/data/cities/lumberton/dollar-general.yml
+++ b/data/cities/lumberton/dollar-general.yml
@@ -8,4 +8,4 @@ street: "East Main Street"
 housenumber: 839
 phone: "+1 (601) 688-4280"
 opening_hours: "Mo-Su 08:00-22:00"
-website: "http://www.dollargeneral.com/"
+website: ""
