--- a/data/cities/meridian/dollar-general-ms-145.yml
+++ b/data/cities/meridian/dollar-general-ms-145.yml
@@ -8,4 +8,4 @@ street: "MS 145"
 housenumber: 5065
 phone: "+1 (601) 282-1400"
 opening_hours: "Mo-Su 07:00-22:00"
-website: "http://www.dollargeneral.com/"
+website: "https://www.dollargeneral.com/store-directory/ms/meridian/12717"
