--- a/data/cities/merigold/dollar-general.yml
+++ b/data/cities/merigold/dollar-general.yml
@@ -8,4 +8,4 @@ street: "West South Street"
 housenumber: 205
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/ms/merigold/11960"
