--- a/data/cities/monticello/dollar-general.yml
+++ b/data/cities/monticello/dollar-general.yml
@@ -8,4 +8,4 @@ street: "West Broad Street"
 housenumber: 1511
 phone: ""
 opening_hours: "Mo-Su 08:00-21:00"
-website: ""
+website: "https://www.dollargeneral.com/store-directory/ms/monticello/3173"
