--- a/data/cities/ovett/dollar-general.yml
+++ b/data/cities/ovett/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Ovett-Moselle Road"
 housenumber: 3440
 phone: "+1 (601) 651-7417"
 opening_hours: "Mo-Su 08:00-22:00"
-website: "http://www.dollargeneral.com/"
+website: "https://www.dollargeneral.com/store-directory/ms/ovett/22093"
