--- a/data/cities/oxford/dollar-general-commerce-drive.yml
+++ b/data/cities/oxford/dollar-general-commerce-drive.yml
@@ -8,4 +8,4 @@ street: "Commerce Drive"
 housenumber: 101
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/ms/oxford/14911"
