--- a/data/cities/oxford/dollar-general-north-lamar-boulevard.yml
+++ b/data/cities/oxford/dollar-general-north-lamar-boulevard.yml
@@ -8,4 +8,4 @@ street: "North Lamar Boulevard"
 housenumber: 
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/ms/oxford/9326"
