--- a/data/cities/oxford/dollar-general-old-sardis-road.yml
+++ b/data/cities/oxford/dollar-general-old-sardis-road.yml
@@ -8,4 +8,4 @@ street: "Old Sardis Road"
 housenumber: 239
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/ms/oxford/18304"
