--- a/data/cities/oxford/dollar-general.yml
+++ b/data/cities/oxford/dollar-general.yml
@@ -8,4 +8,4 @@ street: "University Avenue"
 housenumber: 1906
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/ms/oxford/3204"
