--- a/data/cities/oxford/walgreens.yml
+++ b/data/cities/oxford/walgreens.yml
@@ -8,4 +8,4 @@ street: "University Avenue"
 housenumber: 1808
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.walgreens.com/locator/walgreens-1808+university+ave-oxford-ms-38655/id=7757"
