--- a/data/cities/petal/dollar-general-south-main-street.yml
+++ b/data/cities/petal/dollar-general-south-main-street.yml
@@ -8,4 +8,4 @@ street: "South Main Street"
 housenumber: 748
 phone: "+1 (601) 582-8146"
 opening_hours: "Mo-Su 07:00-22:00"
-website: "https://www.dollargeneral.com/"
+website: "https://www.dollargeneral.com/store-directory/ms/petal/884"
