--- a/data/cities/petal/dollar-general.yml
+++ b/data/cities/petal/dollar-general.yml
@@ -8,4 +8,4 @@ street: "MS 42"
 housenumber: 1193
 phone: "+1 (601) 582-0861"
 opening_hours: "Mo-Su 08:00-22:00"
-website: "https://www.dollargeneral.com/"
+website: "https://www.dollargeneral.com/store-directory/ms/petal/6372"
