--- a/data/cities/poplarville/dollar-general.yml
+++ b/data/cities/poplarville/dollar-general.yml
@@ -8,4 +8,4 @@ street: "South Main Street"
 housenumber: 1405
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/ms/poplarville/926"
