--- a/data/cities/purvis/dollar-general.yml
+++ b/data/cities/purvis/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Lamar Property Drive"
 housenumber: 12
 phone: "+1 (601) 794-8466"
 opening_hours: "Mo-Su 08:00-22:00"
-website: "http://www.dollargeneral.com/"
+website: "https://www.dollargeneral.com/store-directory/ms/purvis/3398"
