--- a/data/cities/richton/dollar-general.yml
+++ b/data/cities/richton/dollar-general.yml
@@ -8,4 +8,4 @@ street: "North Front Street"
 housenumber: 601
 phone: "+1 (601) 689-8129"
 opening_hours: ""
-website: "https://www.dollargeneral.com"
+website: "https://www.dollargeneral.com/store-directory/ms/richton/10386"
