--- a/data/cities/sandersville/dollar-general.yml
+++ b/data/cities/sandersville/dollar-general.yml
@@ -8,4 +8,4 @@ street: "South Front Street"
 housenumber: 588
 phone: "+1 (601) 422-0653"
 opening_hours: "Mo-Su 07:00-23:00"
-website: "https://www.dollargeneral.com/"
+website: "https://www.dollargeneral.com/store-directory/ms/sandersville/7190"
