--- a/data/cities/saucier/dollar-general.yml
+++ b/data/cities/saucier/dollar-general.yml
@@ -8,4 +8,4 @@ street: "West Wortham Road"
 housenumber: 17140
 phone: "+1 601 909 4410"
 opening_hours: "Mo-Su 07:00-22:00"
-website: "https://stores.dollargeneral.com/ms/saucier/15474/"
+website: "https://www.dollargeneral.com/store-directory/ms/saucier/15474"
