--- a/data/cities/seminary/dollar-general.yml
+++ b/data/cities/seminary/dollar-general.yml
@@ -8,4 +8,4 @@ street: "MS 590"
 housenumber: 71
 phone: ""
 opening_hours: ""
-website: "https://www.dollargeneral.com/"
+website: "https://www.dollargeneral.com/store-directory/ms/seminary/9640"
