--- a/data/cities/shaw/dollar-general.yml
+++ b/data/cities/shaw/dollar-general.yml
@@ -8,4 +8,4 @@ street: "North Highway 61"
 housenumber: 104
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/store-directory/ms/shaw/11588"
