--- a/data/cities/southaven/cvs-pharmacy.yml
+++ b/data/cities/southaven/cvs-pharmacy.yml
@@ -8,4 +8,4 @@ street: "Church Road East"
 housenumber: 2955
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.cvs.com/store-locator/southaven-ms-pharmacies/2955-church-street-east-southaven-ms-38671/storeid=8994"
