--- a/data/cities/southaven/walgreens.yml
+++ b/data/cities/southaven/walgreens.yml
@@ -8,4 +8,4 @@ street: "Church Road East"
 housenumber: 2996
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.walgreens.com/locator/walgreens-2996+church+rd+e-southaven-ms-38671/id=11890"
