--- a/data/cities/state-line/dollar-general.yml
+++ b/data/cities/state-line/dollar-general.yml
@@ -8,4 +8,4 @@ street: "Saint Peter Street"
 housenumber: 271
 phone: "+1 (601) 848-7240"
 opening_hours: "Mo-Su 08:00-22:00"
-website: ""
+website: "https://www.dollargeneral.com/store-directory/ms/state-line/11131"
