update content and data

--- a/data/cities/gulfport/cvs-pharmacy.yml
+++ b/data/cities/gulfport/cvs-pharmacy.yml
@@ -1,11 +1,11 @@
-id: 166047642
+id: 166305999
 type: way
-latitude: 30.44305
-longitude: -89.09775
-postcode: "39503"
+latitude: 30.37964
+longitude: -89.09218
+postcode: "39501"
 city: Gulfport
-street: "Highway 49"
-housenumber: 11022
+street: "25th Avenue"
+housenumber: 2424
 phone: ""
 opening_hours: ""
-website: "https://www.cvs.com/store-locator/gulfport-ms-pharmacies/11022-hwy-49-gulfport-ms-39503/storeid=5908"
+website: "https://www.cvs.com/store-locator/gulfport-ms-pharmacies/2424-25th-ave-gulfport-ms-39501/storeid=5923"
